--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <img class="cloud-top" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Jenny Dolan</h1>
     <p class = "subtitle">an IT practitioner</p>
-    <img class="mountain" src="/images/mountain.png" alt="mountain-img">
-    <img class="cloud-bottom" src="https://github.com/pocketfullofstarz/jennydolan/blob/master/Images/cloud.png" alt="cloud-img">
+    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    <img class="cloud-bottom" src="images/cloud.png" alt="cloud-img">
   
   </div>
 
