--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
   <div class="top-container">
-    <img class="cloud-top" src="./images/cloud.png" alt="cloud-img">
+    <img class="cloud-top" src="/images/cloud.png" alt="cloud-img">
     <h1>I'm Jenny Dolan</h1>
     <p class = "subtitle">an IT practitioner</p>
-    <img class="mountain" src="../images/mountain.png" alt="mountain-img">
-    <img class="cloud-bottom" src="images/cloud.png" alt="cloud-img">
+    <img class="mountain" src="/images/mountain.png" alt="mountain-img">
+    <img class="cloud-bottom" src="/images/cloud.png" alt="cloud-img">
   
   </div>
 
