--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
 <body>
   <div class="top-container">
-    <img class="cloud-top" src="https://github.com/pocketfullofstarz/jennydolan/blob/master/Images/cloud.png" alt="cloud-img">
+    <img class="cloud-top" src="cloud.png" alt="cloud-img">
     <h1>I'm Jenny Dolan</h1>
     <p class = "subtitle">an IT practitioner</p>
-    <img class="mountain" src="/images/mountain.png" alt="mountain-img">
-    <img class="cloud-bottom" src="https://github.com/pocketfullofstarz/jennydolan/blob/master/Images/cloud.png" alt="cloud-img">
+    <img class="mountain" src="mountain.png" alt="mountain-img">
+    <img class="cloud-bottom" src="cloud.png" alt="cloud-img">
   
   </div>
 
 
   <div class="middle-container">
     <div class="profile">
-      <img class = "jenny" src="images/jennyd.png" alt="jenny-img">
+      <img class = "jenny" src="jennyd.png" alt="jenny-img">
       <h2>Hello.</h2>
       <p class = "summary">I have 12+ years of software engineering and management experience with a demonstrated history of working in financial services/ insurance sectors. I have a successful track record in managing adoption of Agile [SAFe] at a Fortune 100 company. I have significant product management experience in website development, human resources, implementing large-scale network platforms, marketing strategy, dev-ops and business transformation.</p>
     </div>
@@ -32,12 +32,12 @@
       <h2>What can I do.</h2>
 
       <div class="skill-row">
-        <img class="management" src="images/management.png" alt="management-img">
+        <img class="management" src="management.png" alt="management-img">
         <h3>Delivering Amazing Software</h3>
         <p>Using Agile Methodologies and my versatile development experience, I will work alongside your team to build, develop and deploy software solutions that your customers will love.</p>
       </div>
       <div class="skill-row">
-          <img class="cloudcomputing" src="images/cloudcomputing.png" alt="cloudcomputing-img">
+          <img class="cloudcomputing" src="cloudcomputing.png" alt="cloudcomputing-img">
         <h3>Cloud and Dev / Ops</h3>
         <p class = "skill-row-description">I can help bring your software and platforms to the cloud by developing a road map to strengthen institutional knowledge and capabilities. I will use dev-ops practices to significantly reduce your long term costs and improve automation skills of your team. I will also partner with you to proactively address talent growth plan compliance.</p>
       </div>
