--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="top-container">
-    <img class="cloud-top" src="cloud.png" alt="cloud-img">
+    <img class="cloud-top" site_url: ttps://github.com/pocketfullofstarz/jennydolan/blob/master/Images/cloud.png alt="cloud-img">
     <h1>I'm Jenny Dolan</h1>
     <p class = "subtitle">an IT practitioner</p>
     <img class="mountain" src="mountain.png" alt="mountain-img">
