--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div class="skill-row">
         <img class="management" src="management.png" alt="management-img">
-        <h3>Delivering Amazing Software</h3>
+        <h3>Deliver Amazing Software</h3>
         <p>Using Agile Methodologies and my versatile development experience, I will work alongside your team to build, develop and deploy software solutions that your customers will love.</p>
       </div>
       <div class="skill-row">
