--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
       <div class="skill-row">
           <img class="cloudcomputing" src="cloudcomputing.png" alt="cloudcomputing-img">
         <h3>Cloud and Dev / Ops</h3>
-        <p class = "skill-row-description">I can help bring your software and platforms to the cloud by developing a road map to strengthen institutional knowledge and capabilities. I will use dev-ops practices to significantly reduce your long term costs and improve automation skills of your team. I will also partner with you to proactively address talent growth plan compliance.</p>
+        <p class = "skill-row-description">I can help bring your software and platforms to the cloud by developing a road map 
+          to strengthen institutional knowledge and capabilities. I will use dev-ops practices to significantly 
+          reduce your long term costs and improve automation skills of your team. 
+          I will also partner with you to proactively perform talent assessments and gather governance / compliance requirements.</p>
       </div>
 
     </div>
