--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="top-container">
     <img class="cloud-top" src="cloud.png" alt="cloud-img">
     <h1>I'm Jenny Dolan</h1>
-    <p class = "subtitle">an IT practitioner</p>
+    <p class = "subtitle">An IT Practitioner</p>
     <img class="mountain" src="mountain.png" alt="mountain-img">
     <img class="cloud-bottom" src="cloud.png" alt="cloud-img">
   </div>
@@ -28,7 +28,7 @@
     </div>
     <hr>
     <div class="skills">
-      <h2>What can I do.</h2>
+      <h2>What Can I Do?</h2>
 
       <div class="skill-row">
         <img class="management" src="management.png" alt="management-img">
@@ -49,7 +49,7 @@
       <div class="bottom-container">
       <h2>Get In Touch.</h2>
         <p class = "contact-message">
-          If you would like to reach out, please use e-mail below:  </p>
+          If you would like to reach out, please use the e-mail below:  </p>
           <h3>bigdatagirl@gmail.com</h3>
           
   </div>
