--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="top-container">
     <img class="cloud-top" src="cloud.png" alt="cloud-img">
-    <h1>I'm Jenny Dolan</h1>
+    <h1>Jenny Dolan</h1>
     <p class = "subtitle">an IT practitioner</p>
     <img class="mountain" src="mountain.png" alt="mountain-img">
     <img class="cloud-bottom" src="cloud.png" alt="cloud-img">
