--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="top-container">
     <img class="cloud-top" src="cloud.png" alt="cloud-img">
     <h1>Jenny Dolan</h1>
-    <p class = "subtitle">an IT practitioner</p>
+    <p class = "subtitle">Experienced Software Development Manager</p>
     <img class="mountain" src="mountain.png" alt="mountain-img">
     <img class="cloud-bottom" src="cloud.png" alt="cloud-img">
   </div>
