--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </body>
 <div class="attribution">
 
-<a class="footer-link" href="https://www.linkedin.com/in/jenniferdolan/">LinkedIn</a><span> ⎮ </span><a class = "resume" href = "https://pocketfullofstarz.github.io/Resume/">My Resume</a></a>
+<a class="footer-link" href="https://www.linkedin.com/in/jenniferdolan/">LinkedIn</a><span> ⎮ </span><a class = "resume" href = "https://pocketfullofstarz.github.io/Profile/">My Resume</a></a>
 
 <!-- <span> ⎮ </span><a>Example Projects</a>  -->
 <br>
