--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <a class="footer-link" href="https://www.linkedin.com/in/jenniferdolan/">LinkedIn</a><span> ⎮ </span><a class = "resume" href = "https://pocketfullofstarz.github.io/Profile/">My Resume</a></a>
 
-<!-- <span> ⎮ </span><a>Example Projects</a>  -->
+<span> ⎮ </span><a href="https://ancient-journey-37002.herokuapp.com/">My Newsletter Sign Up</a>
 <br>
   Icons made by <a href="https://www.flaticon.com/authors/phatplus" title="phatplus">phatplus</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
 
