updated title and removed profile link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="top-container">
     <img class="cloud-top" src="cloud.png" alt="cloud-img">
     <h1>Jenny Dolan</h1>
-    <p class = "subtitle">Experienced Software Development Manager</p>
+    <p class = "subtitle">Experienced Product & Engineering Manager</p>
     <img class="mountain" src="mountain.png" alt="mountain-img">
     <img class="cloud-bottom" src="cloud.png" alt="cloud-img">
   </div>
@@ -58,9 +58,7 @@
 </body>
 <div class="attribution">
 
-<a class="footer-link" href="https://www.linkedin.com/in/jenniferdolan/">LinkedIn</a><span> ⎮ </span><a class = "resume" href = "https://pocketfullofstarz.github.io/Profile/">My Resume</a></a>
-
-<span> ⎮ </span><a href="https://ancient-journey-37002.herokuapp.com/">My Newsletter Sign Up</a>
+<a class="footer-link" href="https://www.linkedin.com/in/jenniferdolan/">LinkedIn</a><span> ⎮ </span><a href="https://ancient-journey-37002.herokuapp.com/">My Newsletter Sign Up</a>
 <br>
   Icons made by <a href="https://www.flaticon.com/authors/phatplus" title="phatplus">phatplus</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
 
