updated some experience
changed web to software (as I have more mobile now) and infra as code to account for

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img class = "jenny" src="jennyd.png" alt="jenny-img">
       <h2>About Me.</h2>
-      <p class = "summary">I have 12+ years of software engineering and management experience with a demonstrated history of working in financial services/ insurance sectors. I have a successful track record in managing adoption of Agile [SAFe] at a Fortune 100 company. I have significant product management experience in software development, human resources, implementing large-scale network platforms, marketing strategy, dev-ops and business transformation.</p>
+      <p class = "summary">I have 12+ years of software engineering and management experience with a demonstrated history of working in financial services/ insurance sectors. I have a successful track record in managing adoption of Agile [SAFe] at a Fortune 100 company. I have significant product management experience in software development, human resources, implementing large-scale network platforms, marketing strategy, dev-ops, infra as code and business transformation.</p>
     </div>
     <hr>
     <div class="skills">
